syntax = "proto3";

import "spiderrock_common.proto";


package spiderrock.protobuf;

import "google/protobuf/timestamp.proto";

/*
    SymbolMarginSummary records are published by the AggRiskServers and consumed by execution engines
*/    
message SymbolMarginSummaryV5 {
    message PKey {
        
        TickerKey ticker = 10; // stock ticker (eg MSFT, SPY)
        string accnt = 11; // SRAccnt (SR assigned;up to 16 chars)
        DateKey trade_date = 12; // current [live] period trading date
        string client_firm = 13; // SR assigned client firm
    }


    MessageMetadata _meta = 1;
    
    PKey pkey = 2;
    int32 stk_pos = 135;
    int32 fut_pos = 136;
    int32 opt_pos = 137;
    float margin_uDn_vDn = 131; // Margin: uPrc Dn / Vol Dn
    float margin_uDn_vUp = 132; // Margin: uPrc Dn / Vol Up
    float margin_uUp_vDn = 133; // Margin: uPrc Up / Vol Dn
    float margin_uUp_vUp = 134; // Margin: uPrc Up / Vol Up
    google.protobuf.Timestamp timestamp = 130;
}


